--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.29.0",
     "connectkit": "^1.7.3",
     "next": "14.1.4",
+    "nuqs": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
